--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ img{
 .text-primary{
     color: #FF5400;
 }
+.text-gray{
+    color: #5A5A5D;
+}
 .bg-primary{
     background-color: #FF5400;
 }
@@ -42,4 +45,12 @@ padding: 14px auto;
 
 .border-rounded{
     border-radius: 16px;
+}
+
+
+@media screen and (max-width:600px) {
+    
+}
+@media screen and (min-width:601px) and (max-width:991px) {
+    
 }
