--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;800&display=swap');
+*{
+    font-family: 'Mulish', sans-serif;
+}
+
 /* universal style */
 a{
     text-decoration: none;
@@ -46,6 +51,7 @@ padding: 14px auto;
 .border-rounded{
     border-radius: 16px;
 }
+
 
 
 @media screen and (max-width:600px) {
