--- a/style.css
+++ b/style.css
@@ -246,10 +246,15 @@ background-color: rgba(251, 181, 99, 0.05);
 /* Newsletter style */
    .newsletter-content{
     display: flex;
+    
     flex-direction: column;
-    padding: 40px;
+    padding: 4%;
     border-radius: 16px;
 border: 1px solid #FF5400;
+   }
+   .newsletter-section{
+    gap: 2%;
+    padding: 1%;
    }
    .newsletter-content input{
     padding: 16px 20px;
@@ -267,7 +272,31 @@ background-color: rgba(19, 19, 24, 0.05);
    .newsletter-content h6{
     margin: 0 0 16px 0;
    }
-
+ .newsletter-img{
+    position: relative;
+ }
+ .newsletter-img img{
+    height: 100%;
+ }
+ .save-up{
+    position: absolute;
+    text-align: center;
+    color: white;
+    border-radius: 16px;
+    top: 53%;
+    left: 48%;
+    transform: rotate(-19.628deg);
+    padding: 4%;
+    
+ }
+ .save-up h3{
+   
+    margin: 4px;
+    font-weight: 800;
+ }
+ .save-up p{
+    margin: 0;
+ }
 
 /* footer style */
 .logo img{
@@ -353,7 +382,28 @@ font-weight: 300;
     margin: 20px 24px;
 }
 
+
+
+ .save-up h3{
+    font-size: 21.138px;
+ }
+ .save-up p{
+    font-size: 15.854px;
+ }
+
+
+
 }
-@media screen and (min-width:601px) and (max-width:991px) {
+
+@media screen and (min-width:600px) and (max-width:992px) {
+    .save-up h3{
+        font-size: 20px;
+    }
+    
+}
+@media screen and (min-width:992px) and (max-width:1200px) {
+    .save-up h3{
+        font-size: 25px;
+    }
     
 }
