full structure completed without deals and extra section

--- a/style.css
+++ b/style.css
@@ -162,9 +162,7 @@ padding: 16px;
 .choose-section-img-container div img{
     height: 300px;
 }
-.choose-section-img-container div{
-    
-}
+
 
 .destination-img-card-1{
     grid-area: iOne;
@@ -187,7 +185,8 @@ padding: 16px;
 
 }
 .destination-img-card-5{
-    grid-area: ifive;position: relative;
+    grid-area: ifive;
+    position: relative;
 
 }
 .destination-img-card-6{
@@ -247,6 +246,74 @@ background-color: rgba(251, 181, 99, 0.05);
     background: rgba(233, 68, 68, 0.05);
 
 }
+
+/* Deals and discount section */
+
+.deals-section-first-image{
+    background-image: url(Images/Group\ 13\ \(1\)\ \(1\).png),linear-gradient(180deg, rgba(19, 19, 24, 0.80), rgba(19, 19, 24, 0.00) );
+    background-repeat: no-repeat;
+     background-position: center;
+     background-blend-mode: darken;
+     padding: 106px 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   
+}
+
+.box-under-deals{
+    border-radius: 8px;
+background: rgba(255, 255, 255, 0.30);
+padding: 16px;
+}
+
+/* Simple perfect place */
+    
+.simple-perfect-section{
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    justify-content: space-between;
+ 
+    margin: 100px auto;
+  
+
+}
+.simple-perfect-img img{
+    height: 100%;
+}
+
+.simple-perfect-img{
+    position: relative;
+}
+
+.simple-perfect-img h6{
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 45%;
+    left: 25%;
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+    text-align: center;
+}
+
+
+.simple-perfect-content p,.simple-perfect-content li{
+    line-height: 26px;
+}
+.simple-perfect-content li{
+    font-weight: 700;
+} 
+.simple-perfect-section button{
+    padding: 14px 35px;
+}
+.simple-perfect-content{
+    padding-right: 9%;
+}
+
+
 /* Newsletter style */
    .newsletter-content{
     display: flex;
@@ -255,9 +322,13 @@ background-color: rgba(251, 181, 99, 0.05);
     padding: 4%;
     border-radius: 16px;
 border: 1px solid #FF5400;
+
+
    }
-   .newsletter-section{
-    gap: 2%;
+
+
+
+   .newsletter-section,.simple-perfect-section{
     padding: 1%;
    }
    .newsletter-content input{
@@ -352,7 +423,7 @@ font-weight: 300;
     .search-section input,.search-section button,.search-section select{
         margin: 16px;
     }
-    .popular-tours-section{
+    .popular-tours-section,.simple-perfect-section{
         grid-template-columns: repeat(1,auto);
 
     }
@@ -394,7 +465,13 @@ font-weight: 300;
  .save-up p{
     font-size: 15.854px;
  }
-
+ .simple-perfect-img,.newsletter-img{
+    margin-top: 4%;
+ }
+ 
+ .simple-perfect-content{
+    padding-right: 0;
+}
 
 
 }
